Introduce contracts
