# core/stats/types.go
@@ -4,6 +4,7 @@ import (
 	mapset "github.com/deckarep/golang-set"
 	"github.com/idena-network/idena-go/blockchain/types"
 	"github.com/idena-network/idena-go/common"
+	"github.com/idena-network/idena-go/core/state"
 	statsTypes "github.com/idena-network/idena-go/stats/types"
 	"github.com/idena-network/idena-indexer/db"
 	"math/big"
@@ -25,21 +26,50 @@ const (
 )
 
 type Stats struct {
-	ValidationStats        *statsTypes.ValidationStats
-	MinScoreForInvite      *float32
-	RewardsStats           *RewardsStats
-	MiningRewards          []*db.MiningReward
-	FinalCommittee         []common.Address
-	BurntPenaltiesByAddr   map[common.Address]*big.Int
-	BurntCoins             *big.Int
-	BurntCoinsByAddr       map[common.Address][]*db.BurntCoins
-	MintedCoins            *big.Int
-	BalanceUpdateAddrs     mapset.Set
-	ActivationTxTransfers  []db.ActivationTxTransfer
-	KillTxTransfers        []db.KillTxTransfer
-	KillInviteeTxTransfers []db.KillInviteeTxTransfer
-	BalanceUpdates         []*db.BalanceUpdate
-	CommitteeRewardShare   *big.Int
+	ValidationStats                          *statsTypes.ValidationStats
+	MinScoreForInvite                        *float32
+	RewardsStats                             *RewardsStats
+	MiningRewards                            []*db.MiningReward
+	FinalCommittee                           []common.Address
+	BurntPenaltiesByAddr                     map[common.Address]*big.Int
+	BurntCoins                               *big.Int
+	BurntCoinsByAddr                         map[common.Address][]*db.BurntCoins
+	MintedCoins                              *big.Int
+	BalanceUpdateAddrs                       mapset.Set
+	ActivationTxTransfers                    []db.ActivationTxTransfer
+	KillTxTransfers                          []db.KillTxTransfer
+	KillInviteeTxTransfers                   []db.KillInviteeTxTransfer
+	BalanceUpdates                           []*db.BalanceUpdate
+	CommitteeRewardShare                     *big.Int
+	IdentityStateChangesByTxHashAndAddress   map[common.Hash]map[common.Address]*IdentityStateChange
+	FeesByTxHash                             map[common.Hash]*big.Int
+	OracleVotingContracts                    []*db.OracleVotingContract
+	OracleVotingContractCallStarts           []*db.OracleVotingContractCallStart
+	OracleVotingContractCallVoteProofs       []*db.OracleVotingContractCallVoteProof
+	OracleVotingContractCallVotes            []*db.OracleVotingContractCallVote
+	OracleVotingContractCallFinishes         []*db.OracleVotingContractCallFinish
+	OracleVotingContractCallProlongations    []*db.OracleVotingContractCallProlongation
+	OracleVotingContractCallAddStakes        []*db.OracleVotingContractCallAddStake
+	OracleVotingContractTerminations         []*db.OracleVotingContractTermination
+	OracleLockContracts                      []*db.OracleLockContract
+	OracleLockContractCallCheckOracleVotings []*db.OracleLockContractCallCheckOracleVoting
+	OracleLockContractCallPushes             []*db.OracleLockContractCallPush
+	OracleLockContractTerminations           []*db.OracleLockContractTermination
+	RefundableOracleLockContracts            []*db.RefundableOracleLockContract
+	RefundableOracleLockContractCallDeposits []*db.RefundableOracleLockContractCallDeposit
+	RefundableOracleLockContractCallPushes   []*db.RefundableOracleLockContractCallPush
+	RefundableOracleLockContractCallRefunds  []*db.RefundableOracleLockContractCallRefund
+	RefundableOracleLockContractTerminations []*db.RefundableOracleLockContractTermination
+	MultisigContracts                        []*db.MultisigContract
+	MultisigContractCallAdds                 []*db.MultisigContractCallAdd
+	MultisigContractCallSends                []*db.MultisigContractCallSend
+	MultisigContractCallPushes               []*db.MultisigContractCallPush
+	MultisigContractTerminations             []*db.MultisigContractTermination
+	TimeLockContracts                        []*db.TimeLockContract
+	TimeLockContractCallTransfers            []*db.TimeLockContractCallTransfer
+	TimeLockContractTerminations             []*db.TimeLockContractTermination
+	TxReceipts                               []*db.TxReceipt
+	ContractTxsBalanceUpdates                []*db.ContractTxBalanceUpdates
 }
 
 type RewardsStats struct {
@@ -66,4 +96,9 @@ type RewardStats struct {
 	Balance *big.Int
 	Stake   *big.Int
 	Type    RewardType
+}
+
+type IdentityStateChange struct {
+	PrevState state.IdentityState
+	NewState  state.IdentityState
 }
